--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
         </div>
         <div class="right">
-            <img src="gplay.webp" alt="goggle">
-            <img src="apple.webp" alt="appstore">
+            <img src="./asset/image/gplay.webp" alt="goggle">
+            <img src="./asset/image/apple.webp" alt="appstore">
         </div>
 
 
