--- a/newsroom.html
+++ b/newsroom.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day14</title>
+    <title>esewa</title>
     <link rel="stylesheet" href="./asset/style/style.css">
 </head>
 
