--- a/notice.html
+++ b/notice.html
@@ -2,33 +2,25 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>esewa</title>
-    <link rel="stylesheet" href="./asset/style/style.css">
+    <link rel="stylesheet" href="./asset/style/style.css" />
 </head>
 
 <body>
     <nav>
         <div class="left">
-            <img src="./asset/image/eSewa-logo.webp" alt="logo">
-
+            <img src="./asset/image/eSewa-logo.webp" alt="logo" />
         </div>
         <div class="center">
-            <input type="search" placeholder="Search...">
+            <input type="search" placeholder="Search..." />
             <button>Search</button>
-
         </div>
         <div class="right">
-            <img src="./asset/image/gplay.webp" alt="goggle">
-            <img src="./asset/image/apple.webp" alt="appstore">
+            <img src="./asset/image/gplay.webp" alt="goggle" />
+            <img src="./asset/image/apple.webp" alt="appstore" />
         </div>
-
-
-
-
-
-
     </nav>
     <div class="navbar">
         <div class="navbar-left">
@@ -48,80 +40,62 @@
 
             <div class="navbar-right">
                 <a href="https://www.facebook.com/esewa/">
-                    <img src="./asset/image/fb.webp" alt="fblogo">
+                    <img src="./asset/image/fb.webp" alt="fblogo" />
                 </a>
                 <a href="https://www.instagram.com/esewa_official/?hl=en">
-                    <img src="./asset/image/insta.webp" alt="instalogo">
+                    <img src="./asset/image/insta.webp" alt="instalogo" />
                 </a>
                 <a href="https://www.youtube.com/c/eSewaFonepay">
-                    <img src="./asset/image/youtube.webp" alt="youtubelogo">
-
+                    <img src="./asset/image/youtube.webp" alt="youtubelogo" />
                 </a>
                 <a href="https://twitter.com/esewanepal">
-                    <img src="./asset/image/twitter.webp" alt="twitterlogo">
+                    <img src="./asset/image/twitter.webp" alt="twitterlogo" />
                 </a>
-
             </div>
         </div>
     </div>
     <section>
         <div class="right-1">
             <span>about esewa</span>
-            <img src="./asset/image/eSewa-logo.webp" alt="logoo">
+            <img src="./asset/image/eSewa-logo.webp" alt="logoo" />
             <p>
-                eSewa is a mobile wallet that allows you to make online and ofline payments to
-                merchants,transfer
-                funds
-                to
-                banks and much more.
-
+                eSewa is a mobile wallet that allows you to make online and ofline
+                payments to merchants,transfer funds to banks and much more.
             </p>
             <p>
-                for example with eSewa you can top-up your mobile pay postpaid, landline and ADSL
-                bills, buy bus tickets, airlines tickets and movie tickets, transfer money from one bank to
-                another.
+                for example with eSewa you can top-up your mobile pay postpaid,
+                landline and ADSL bills, buy bus tickets, airlines tickets and movie
+                tickets, transfer money from one bank to another.
             </p>
         </div>
 
         <div class="middle-1">
             <p>general</p>
 
-
             <ul>
-                <li> <a href="#">getting started</a></li>
-                <li> <a href="#">Security</a></li>
-                <li> <a href="#">Sms security</a></li>
-                <li> <a href="#">reward points</a></li>
-                <li> <a href="#">esewa trariffs</a></li>
-                <li> <a href="#">transaction limits</a></li>
-
+                <li><a href="#">getting started</a></li>
+                <li><a href="#">Security</a></li>
+                <li><a href="#">Sms security</a></li>
+                <li><a href="#">reward points</a></li>
+                <li><a href="#">esewa trariffs</a></li>
+                <li><a href="#">transaction limits</a></li>
             </ul>
-
-
         </div>
         <div class="left-1">
             <p>Company</p>
             <ul>
-                <li> <a href="#">About us</a></li>
-                <li> <a href="#">career</a></li>
-                <li> <a href="#">partner banks</a></li>
-                <li> <a href="#">developer guide</a></li>
-                <li> <a href="#">faq</a></li>
-                <li> <a href="#">contact us</a></li>
+                <li><a href="#">About us</a></li>
+                <li><a href="#">career</a></li>
+                <li><a href="#">partner banks</a></li>
+                <li><a href="#">developer guide</a></li>
+                <li><a href="#">faq</a></li>
+                <li><a href="#">contact us</a></li>
             </ul>
-
         </div>
-
-
     </section>
     <footer>
         <p>copyright@2023-esewa</p>
     </footer>
-
-
-
-
-
 </body>
 
 </html>
